[package]
name = "website"
version = "0.1.0"
authors = ["Vaishnav-Sabari-Girish <forgamesonly684@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
ratatui = { version = "0.29.0", default-features = false }
color-eyre = "0.6.5"
ratzilla = "0.2.0"
wasm-bindgen = "0.2.105"
web-sys = "0.3.82"
